Fix: Remove download button on mobile (#4)
Also fixes a few styles

--- a/src/components/ContentExplorer/ItemList.scss
+++ b/src/components/ContentExplorer/ItemList.scss
@@ -80,7 +80,6 @@
         cursor: pointer;
         font-weight: 400;
         text-transform: none;
-        user-select: none;
 
         &:active,
         &:hover,
