--- a/src/components/Item/ItemName.scss
+++ b/src/components/Item/ItemName.scss
@@ -1,6 +1,6 @@
 @import '../variables';
 
-.buik-btn.buik-btn-plain.buik-item-label {
+.buik-item-label {
     max-width: 290px;
     overflow: hidden;
     text-overflow: ellipsis;
